test/classes/forwarding/forwarding-self.good
forwarding-self.chpl:7: In function 'main':
forwarding-self.chpl:9: error: forwarding cycle detected
forwarding-self.chpl:2: note: forwarding cycle includes type 'A'
